--- a/internal/views/index.templ
+++ b/internal/views/index.templ
@@ -1,13 +1,11 @@
 package views 
 
+import "github.com/nollidnosnhoj/simplimg/internal/components"
 import "github.com/nollidnosnhoj/simplimg/internal/components/layouts"
 
 templ IndexPage() {
 	@layouts.MainPageLayout("Home") {
 		<h1>Upload image</h1>
-		<form enctype="multipart/form-data" hx-post="/upload" hx-target="this" hx-swap="outerHTML">
-			<input type="file" name="image"/>
-			<input type="submit" value="Upload"/>
-		</form>
+		@components.Uploader()
 	}
 }
