--- a/internal/components/layouts/page.templ
+++ b/internal/components/layouts/page.templ
@@ -6,6 +6,7 @@ templ MainPageLayout(title string) {
 		<script src="/dist/js/vendor/htmx.min.js"></script>
 		<script defer src="dist/js/vendor/alpine.min.js"></script>
 		<link rel="stylesheet" href="/dist/css/tailwind.css"/>
+		<link rel="stylesheet" href="/dist/css/styles.css"/>
 		<body>
 			<div class="navbar absolute bg-base-100">
 				<div class="navbar-start">
