--- a/internal/views/index.templ
+++ b/internal/views/index.templ
@@ -12,7 +12,7 @@ templ IndexPage() {
 					<p class="py-6">
 						Max 5MB. gif, png, jpg.
 					</p>
-					@components.Uploader(nil)
+					@components.Uploader()
 				</div>
 			</div>
 		</div>
