file deletion page

--- a/internal/components/layouts/page.templ
+++ b/internal/components/layouts/page.templ
@@ -4,7 +4,7 @@ templ MainPageLayout(title string) {
 	<html data-them="dracula">
 		<title>{ title }</title>
 		<script src="/dist/js/vendor/htmx.min.js"></script>
-		<script defer src="dist/js/vendor/alpine.min.js"></script>
+		<script defer src="/dist/js/vendor/alpine.min.js"></script>
 		<link rel="stylesheet" href="/dist/css/tailwind.css"/>
 		<link rel="stylesheet" href="/dist/css/styles.css"/>
 		<body>
@@ -22,7 +22,7 @@ templ MainPageLayout(title string) {
 					</div>
 				</div>
 				<div class="navbar-center">
-					<a class="btn btn-ghost text-xl">kopa.lol</a>
+					<a href="/" class="btn btn-ghost text-xl">kopa.lol</a>
 				</div>
 				<div class="navbar-end"></div>
 			</div>
