--- a/internal/components/layouts/page.templ
+++ b/internal/components/layouts/page.templ
@@ -8,7 +8,7 @@ templ MainPageLayout(title string) {
 		<link rel="stylesheet" href="/dist/css/tailwind.css"/>
 		<link rel="stylesheet" href="/dist/css/styles.css"/>
 		<body>
-			<div class="navbar absolute bg-base-100">
+			<div class="navbar absolute bg-transparent">
 				<div class="navbar-start">
 					<div class="dropdown">
 						<div tabindex="0" role="button" class="btn btn-ghost btn-circle">
