--- a/internal/views/404.templ
+++ b/internal/views/404.templ
@@ -4,12 +4,8 @@ import "github.com/nollidnosnhoj/vgpx/internal/components/layouts"
 
 templ NotFoundPage() {
 	@layouts.MainPageLayout("Not Found") {
-		<div class="hero min-h-screen bg-base-200">
-			<div class="hero-content text-center">
-				<div class="max-w-lg">
-					<h1 class="text-5xl font-bold">Looking for something?</h1>
-				</div>
-			</div>
-		</div>
+		@layouts.HeroLayout() {
+			<h1 class="text-5xl font-bold">Looking for something?</h1>
+		}
 	}
 }
