--- a/assets/layouts/page.templ
+++ b/assets/layouts/page.templ
@@ -6,7 +6,7 @@ templ MainPageLayout(title string) {
 		<script src="/dist/js/vendor/htmx.min.js"></script>
 		<script defer src="/dist/js/vendor/alpine.min.js"></script>
 		<link rel="stylesheet" href="/dist/css/tailwind.css"/>
-		<link rel="stylesheet" href="/dist/css/styles.css"/>
+		<link rel="stylesheet" href="/dist/css/app.css"/>
 		<body>
 			<div class="navbar absolute bg-transparent">
 				<div class="navbar-start">
